Implement updating dict API
